docs: documentation for Server class