@@ -15,6 +15,11 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
+/**
+ * This class represents an HTTP server. It handles server startup, shutdown,
+ * request handling, and route management. The server listens for incoming connections,
+ * processes HTTP requests, and sends back HTTP responses.
+ */
 public class Server {
     private final String host;
     private final int port;
@@ -22,16 +27,36 @@ public class Server {
     private final ExecutorService executor;
     private ServerSocketChannel serverChannel;
 
-    // Карта обработчиков: ключ – комбинация метода и пути, значение – обработчик запроса
     private final Map<RequestKey, HttpHandler> handlers = new ConcurrentHashMap<>();
 
+    /**
+     * Constructs a new Server instance with the specified host, port, number of threads,
+     * and whether the server should use virtual threads for concurrent request handling.
+     *
+     * @param host The hostname or IP address to bind the server.
+     * @param port The port number to bind the server.
+     * @param threads The number of threads in the thread pool for handling requests.
+     *                This is used only if the server is not virtual.
+     * @param isVirtual A flag indicating whether to use virtual threads for request handling.
+     *                  If true, the server will use a virtual thread per task executor,
+     *                  otherwise a fixed thread pool will be used.
+     */
     public Server(String host, int port, int threads, boolean isVirtual) {
         this.host = host;
         this.port = port;
         this.isVirtual = isVirtual;
-        this.executor = Executors.newFixedThreadPool(threads);
+        this.executor = isVirtual ? Executors.newVirtualThreadPerTaskExecutor() : Executors.newFixedThreadPool(threads);
     }
 
+    /**
+     * Registers a handler for a specific HTTP method and path combination.
+     * If a handler for the same method and path already exists, a SameRouteException is thrown.
+     *
+     * @param method The HTTP method (e.g., "GET", "POST").
+     * @param path The path of the route.
+     * @param handler The handler that will process requests for the specified method and path.
+     * @throws SameRouteException If a handler already exists for the same method and path.
+     */
     public void addHandler(String method, String path, HttpHandler handler) throws SameRouteException {
         RequestKey key = new RequestKey(method, path);
         if (handlers.containsKey(key)) {
@@ -40,6 +65,13 @@ public class Server {
         handlers.put(key, handler);
     }
 
+    /**
+     * Starts the server, binds it to the specified host and port, and listens for incoming connections.
+     * It processes the requests concurrently using a thread pool.
+     *
+     * @throws IOException If an error occurs while starting the server.
+     * @throws ServerStartupException If an error occurs during server startup.
+     */
     public void start() throws IOException, ServerStartupException {
         try {
             serverChannel = ServerSocketChannel.open();
@@ -63,6 +95,12 @@ public class Server {
     }
 
 
+    /**
+     * Handles an incoming client connection. Reads the HTTP request, processes it,
+     * and sends an appropriate HTTP response back to the client.
+     *
+     * @param clientSocket The socket channel representing the client connection.
+     */
     private void handleConnection(SocketChannel clientSocket) {
         try {
             // Чтение запроса из канала
@@ -100,6 +138,11 @@ public class Server {
         }
     }
 
+    /**
+     * Stops the server and shuts down the resources, including the thread pool and server socket channel.
+     *
+     * @throws ServerShutdownException If an error occurs while shutting down the server.
+     */
     public void stop() throws ServerShutdownException {
         try {
             if (serverChannel != null && serverChannel.isOpen()) {
